SERVER-4012 -- make ctrl-T work like bash and emacs

Small changes to logic to do what bash does when ctrl-T is hit at or
next to the end of a line.